# esofile-reader

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  build.py  constants.py  convertor.py  ef.csv  eso_file.py  eso_processor.py  interval_processor.py  mini_classes.py  misc_os.py  monitor.py  outputs.py  parquet_file.py  pyproject.toml  requirements.txt  search.py  setup.py  sqf.csv
.github/workflows/: build-test.yml  build.yml  pythonapp.yml  test.yml
eso_reader/: __init__.py  base_eso_file.py  building_eso_file.py  constants.py  convertor.py  eso_file.py  eso_processor.py  interval_processor.py  mini_classes.py  misc_os.py  monitor.py  outputs.py  performance.py  search.py  tables.py  tree.py  variable_categories.py
esofile_reader/: __init__.py  base_file.py  constants.py  conversion_tables.py  convertor.py  database_file.py  diff_file.py  eso_file.py  excel_file.py  exceptions.py  fetchers.py  generic_file.py  id_generator.py  id_generators.py  logger.py  mini_classes.py  parquet_file.py  results_file.py  search_tree.py  totals_file.py  typehints.py  version.py
esofile_reader/abstractions/: base_file.py  base_frame.py  base_storage.py  base_tables.py
esofile_reader/data/: base_data.py  df_data.py  df_functions.py  parquet_frame.py  pqt_data.py  sql_data.py
esofile_reader/df/: df_file.py  df_functions.py  df_storage.py  df_tables.py  level_names.py
esofile_reader/outputs/: base_data.py  base_outputs.py  conversion_tables.py  convertor.py  df_data.py  df_functions.py  df_outputs.py  df_outputs_functions.py  outputs.py  sql_data.py  sql_outputs.py  tree.py  (+1 more)
scripts/: build.bat  build_C_ext.bat  run_coverage.bat  run_tests.bat
tests/: __init__.py  session_fixtures.py  session_scope_fixtures.py  test_conversion_tables.py  test_convertor.py  test_data.py  test_data_classes.py  test_data_classes_simple.py  test_db_file_functions.py  test_df_data.py  test_df_db.py  test_df_outputs.py  test_df_storage.py  test_diff_file.py  test_esofile_processing.py  test_excel_file.py  test_file_diff.py  test_file_functions.py  test_file_functions_simple.py  test_file_generation.py  test_file_processing.py  test_get_results.py  test_id_generators.py  test_interval_processor.py  test_logger.py  test_multiple_envs.py  test_outputs_conversion.py  test_parquet_data.py  test_parquet_db.py  test_parquet_frame.py  test_parquet_storage.py  test_peak_results.py  test_pqt_data.py  test_range_interval_file.py  test_restults_fetching.py  test_result_fetchers.py  test_result_fetchers_parquet_file.py  test_result_fetchers_simple.py  test_search_tree.py  test_sql_data.py  (+10 more)
(+92 files in other folders)
