[tool.poetry]
name = "esofile-reader"
version = "0.3.1"
description = ""
authors = ["voightp <vojtechpanek@seznam.cz>"]
license = "Proprietary"

build = "build.py"

[tool.poetry.dependencies]
python = "^3.6.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
openpyxl = "^3.0.4"
pyarrow = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "^5.1"
parameterized = "^0.7.4"
cython = "^0.29.20"
pytest = "^5.4.3"
profilehooks = "^1.12.0"

[tool.poetry.extras]


[tool.black]
line-length = 96

include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.github
  | \.eggs
  | \.idea
  | \.htmlcov

)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

