[tool.poetry]
name = "esofile-reader"
version = "0.5.7"
description = ""
authors = ["voightp <vojtechpanek@seznam.cz>"]
license = "Proprietary"

build = "build.py"

[tool.poetry.dependencies]
python = "^3.6.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
openpyxl = "^3.0.4"
pyarrow = "^2.0.0"
SQLAlchemy = {version = "^1.3.20", optional = true}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "^5.1"
cython = "^0.29.20"
pytest = "^5.4.3"
profilehooks = "^1.12.0"
pre-commit = "^2.7.1"
pytest-cov = "^2.10.1"
pytest-lazy-fixture = "^0.6.3"
setuptools = "^50.3.2"

[tool.poetry.extras]
sql = ["SQLAlchemy"]


[tool.black]
line-length = 96

include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.github
  | \.eggs
  | \.idea
  | \.htmlcov

)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

